updated GeoJSON to pull from remote source

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,8 @@
     "from matplotlib.ticker import FuncFormatter\n",
     "\n",
     "# Load a GeoJSON file containing the geographical boundaries of Orlando neighborhoods\n",
-    "orlando_geo = gpd.read_file(\"orlando.geojson\")\n",
+    "url = \"https://raw.githubusercontent.com/blackmad/neighborhoods/refs/heads/master/orlando.geojson\"\n",
+    "orlando_geo = gpd.read_file(url)\n",
     "\n",
     "# Calculate the median home price for each region in 2024\n",
     "orlando_zillow_long['year'] = pd.to_datetime(orlando_zillow_long['month']).dt.year\n",
