--- a/eda.ipynb
+++ b/eda.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -164,8 +164,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "ds2025-group3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
