fixed pathing and uploading contents of data/ folder

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -272,8 +272,16 @@
     }
    ],
    "source": [
-    "shapefile_path = \"C:/Users/brad/Documents/repos/ds2025-group3/data/cb_2018_12_tract_500k.shp\"\n",
-    "gdf = gpd.read_file(shapefile_path)\n",
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "\n",
+    "# Load the .env file\n",
+    "load_dotenv()\n",
+    "\n",
+    "# Get the notebook path\n",
+    "workspace_path = os.getenv(\"WORKSPACE_PATH\")\n",
+    "\n",
+    "gdf = gpd.read_file(workspace_path + '/data/cb_2018_12_tract_500k.shp')\n",
     "gdf = gdf[gdf['COUNTYFP'] == '095']\n",
     "\n",
     "# Ensure both GeoDataFrames have the same CRS (Coordinate Reference System)\n",
